Bug 1142806 - Try to keep at least one foreground process at any time. r=gsvelto
UltraBlame original commit: 246819a7ee89f0c4f56a3a7b410047358da8435e

--- a/dom/browser-element/mochitest/priority/test_Audio.html
+++ b/dom/browser-element/mochitest/priority/test_Audio.html
@@ -156,6 +156,90 @@ enableProcessPriorityManager
 (
 )
 ;
+/
+/
+ProcessPriorityManager
+requires
+at
+least
+one
+process
+in
+foreground
+/
+/
+so
+that
+other
+processes
+can
+transit
+freely
+between
+foreground
+and
+/
+/
+background
+.
+function
+setupTest
+(
+)
+{
+var
+foreground
+=
+document
+.
+createElement
+(
+'
+iframe
+'
+)
+;
+foreground
+.
+setAttribute
+(
+'
+mozbrowser
+'
+true
+)
+;
+foreground
+.
+src
+=
+browserElementTestHelpers
+.
+emptyPage
+;
+expectMozbrowserEvent
+(
+foreground
+'
+loadend
+'
+)
+.
+then
+(
+runTest
+)
+;
+document
+.
+body
+.
+appendChild
+(
+foreground
+)
+;
+}
 function
 runTest
 (
@@ -426,7 +510,7 @@ true
 ]
 ]
 }
-runTest
+setupTest
 )
 ;
 }
