--- a/dom/browser-element/mochitest/priority/test_DelayedBackgroundTransition.html
+++ b/dom/browser-element/mochitest/priority/test_DelayedBackgroundTransition.html
@@ -12,22 +12,23 @@ html
 -
 Test
 that
-frames
-with
-mozapptype
-=
-inputmethod
-gets
-the
-keyboard
--
-specific
+a
+process
+won
+'
+t
+transit
+to
+BACKGROUND
 priority
-level
-when
-in
-the
-foreground
+unless
+there
+is
+at
+least
+one
+FOREGROUND
+process
 .
 -
 -
@@ -166,34 +167,8 @@ enableProcessPriorityManager
 (
 )
 ;
-/
-/
-ProcessPriorityManager
-requires
-at
-least
-one
-process
-in
-foreground
-/
-/
-so
-that
-other
-processes
-can
-transit
-freely
-between
-foreground
-and
-/
-/
-background
-.
 function
-setupTest
+insertForegroundFrame
 (
 )
 {
@@ -221,6 +196,18 @@ true
 ;
 foreground
 .
+setAttribute
+(
+'
+id
+'
+'
+foreground
+'
+)
+;
+foreground
+.
 src
 =
 browserElementTestHelpers
@@ -233,11 +220,6 @@ foreground
 '
 loadend
 '
-)
-.
-then
-(
-runTest
 )
 ;
 document
@@ -279,23 +261,11 @@ true
 ;
 iframe
 .
-setAttribute
-(
-'
-mozapptype
-'
-'
-inputmethod
-'
-)
-;
-iframe
-.
 src
 =
 browserElementTestHelpers
 .
-emptyPage1
+emptyPage
 ;
 var
 childID
@@ -307,10 +277,10 @@ Promise
 all
 (
 [
-expectOnlyOneProcessCreated
+expectProcessCreated
 (
 '
-FOREGROUND_KEYBOARD
+FOREGROUND
 '
 )
 .
@@ -346,7 +316,7 @@ function
 var
 p
 =
-expectPriorityChange
+expectPriorityDelay
 (
 childID
 '
@@ -354,50 +324,6 @@ BACKGROUND
 '
 )
 ;
-/
-*
-We
-wait
-until
-mozbrowserloadend
-before
-calling
-setVisible
-because
-*
-setVisible
-isn
-'
-t
-available
-until
-mozbrowser
-has
-loaded
-.
-In
-practice
-*
-that
-means
-we
-can
-call
-setVisible
-once
-we
-'
-ve
-gotten
-/
-any
-/
-mozbrowser
-*
-event
-.
-*
-/
 iframe
 .
 setVisible
@@ -424,7 +350,34 @@ expectPriorityChange
 (
 childID
 '
-FOREGROUND_KEYBOARD
+BACKGROUND
+'
+)
+;
+insertForegroundFrame
+(
+)
+;
+return
+p
+;
+}
+)
+.
+then
+(
+function
+(
+)
+{
+var
+p
+=
+expectPriorityChange
+(
+childID
+'
+FOREGROUND
 '
 )
 ;
@@ -434,6 +387,9 @@ setVisible
 (
 true
 )
+;
+return
+p
 ;
 }
 )
@@ -460,7 +416,7 @@ addEventListener
 '
 testready
 '
-setupTest
+runTest
 )
 ;
 <
