--- a/dom/browser-element/mochitest/priority/test_ExpectingSystemMessage2.html
+++ b/dom/browser-element/mochitest/priority/test_ExpectingSystemMessage2.html
@@ -306,6 +306,90 @@ true
 }
 )
 ;
+/
+/
+ProcessPriorityManager
+requires
+at
+least
+one
+process
+in
+foreground
+/
+/
+so
+that
+other
+processes
+can
+transit
+freely
+between
+foreground
+and
+/
+/
+background
+.
+function
+setupTest
+(
+)
+{
+var
+foreground
+=
+document
+.
+createElement
+(
+'
+iframe
+'
+)
+;
+foreground
+.
+setAttribute
+(
+'
+mozbrowser
+'
+true
+)
+;
+foreground
+.
+src
+=
+browserElementTestHelpers
+.
+emptyPage
+;
+expectMozbrowserEvent
+(
+foreground
+'
+loadend
+'
+)
+.
+then
+(
+runTest
+)
+;
+document
+.
+body
+.
+appendChild
+(
+foreground
+)
+;
+}
 function
 runTest
 (
@@ -536,7 +620,7 @@ systemMessageCPULockTimeoutSec
 ]
 ]
 }
-runTest
+setupTest
 )
 ;
 }
