--- a/dom/browser-element/mochitest/priority/test_MultipleFrames.html
+++ b/dom/browser-element/mochitest/priority/test_MultipleFrames.html
@@ -170,6 +170,90 @@ enableProcessPriorityManager
 (
 )
 ;
+/
+/
+ProcessPriorityManager
+requires
+at
+least
+one
+process
+in
+foreground
+/
+/
+so
+that
+other
+processes
+can
+transit
+freely
+between
+foreground
+and
+/
+/
+background
+.
+function
+setupTest
+(
+)
+{
+var
+foreground
+=
+document
+.
+createElement
+(
+'
+iframe
+'
+)
+;
+foreground
+.
+setAttribute
+(
+'
+mozbrowser
+'
+true
+)
+;
+foreground
+.
+src
+=
+browserElementTestHelpers
+.
+emptyPage
+;
+expectMozbrowserEvent
+(
+foreground
+'
+loadend
+'
+)
+.
+then
+(
+runTest
+)
+;
+document
+.
+body
+.
+appendChild
+(
+foreground
+)
+;
+}
 function
 runTest
 (
@@ -422,7 +506,7 @@ addEventListener
 '
 testready
 '
-runTest
+setupTest
 )
 ;
 <
