--- a/dom/browser-element/mochitest/priority/test_WebGLContextLost.html
+++ b/dom/browser-element/mochitest/priority/test_WebGLContextLost.html
@@ -171,6 +171,90 @@ enableProcessPriorityManager
 (
 )
 ;
+/
+/
+ProcessPriorityManager
+requires
+at
+least
+one
+process
+in
+foreground
+/
+/
+so
+that
+other
+processes
+can
+transit
+freely
+between
+foreground
+and
+/
+/
+background
+.
+function
+setupTest
+(
+)
+{
+var
+foreground
+=
+document
+.
+createElement
+(
+'
+iframe
+'
+)
+;
+foreground
+.
+setAttribute
+(
+'
+mozbrowser
+'
+true
+)
+;
+foreground
+.
+src
+=
+browserElementTestHelpers
+.
+emptyPage
+;
+expectMozbrowserEvent
+(
+foreground
+'
+loadend
+'
+)
+.
+then
+(
+runTest
+)
+;
+document
+.
+body
+.
+appendChild
+(
+foreground
+)
+;
+}
 function
 runTest
 (
@@ -813,7 +897,7 @@ true
 ]
 ]
 }
-runTest
+setupTest
 )
 ;
 }
