Bug 1152171 part 2 - Rename AnimationTimeline to DocumentTimeline; r=smaug
And then re-add AnimationTimeline as an abstract super-interface of
DocumentTimeline.

UltraBlame original commit: 9296539ae8007e2b5c0ded48961367ab9b11b2ae

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -3621,6 +3621,42 @@ a
 DOM
 peer
 !
+{
+name
+:
+"
+DocumentTimeline
+"
+pref
+:
+"
+dom
+.
+animations
+-
+api
+.
+core
+.
+enabled
+"
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
 "
 DocumentType
 "
