Bug 1124608 Support D3E EventModifierInit r=smaug
UltraBlame original commit: 1443401a43fbe0453fae18119184e0ea6112e10f

--- a/dom/events/test/test_eventctors.html
+++ b/dom/events/test/test_eventctors.html
@@ -223,6 +223,67 @@ e
 true
 )
 ;
+function
+isMethodResultInitializer
+(
+aPropName
+)
+{
+return
+aPropName
+.
+startsWith
+(
+"
+modifier
+"
+)
+;
+}
+function
+getPropValue
+(
+aEvent
+aPropName
+)
+{
+if
+(
+aPropName
+.
+startsWith
+(
+"
+modifier
+"
+)
+)
+{
+return
+aEvent
+.
+getModifierState
+(
+aPropName
+.
+substr
+(
+"
+modifier
+"
+.
+length
+)
+)
+;
+}
+return
+aEvent
+[
+aPropName
+]
+;
+}
 /
 /
 Event
@@ -3600,6 +3661,51 @@ metaKey
 false
 }
 {
+modifierAltGraph
+:
+false
+}
+{
+modifierCapsLock
+:
+false
+}
+{
+modifierFn
+:
+false
+}
+{
+modifierFnLock
+:
+false
+}
+{
+modifierNumLock
+:
+false
+}
+{
+modifierOS
+:
+false
+}
+{
+modifierScrollLock
+:
+false
+}
+{
+modifierSymbol
+:
+false
+}
+{
+modifierSymbolLock
+:
+false
+}
+{
 repeat
 :
 false
@@ -3686,6 +3792,51 @@ true
 }
 {
 metaKey
+:
+true
+}
+{
+modifierAltGraph
+:
+true
+}
+{
+modifierCapsLock
+:
+true
+}
+{
+modifierFn
+:
+true
+}
+{
+modifierFnLock
+:
+true
+}
+{
+modifierNumLock
+:
+true
+}
+{
+modifierOS
+:
+true
+}
+{
+modifierScrollLock
+:
+true
+}
+{
+modifierSymbol
+:
+true
+}
+{
+modifierSymbolLock
 :
 true
 }
@@ -3820,6 +3971,15 @@ code
 continue
 ;
 }
+if
+(
+!
+isMethodResultInitializer
+(
+prop
+)
+)
+{
 ok
 (
 prop
@@ -3843,6 +4003,7 @@ prop
 "
 )
 ;
+}
 defaultKeyboardEventValues
 [
 prop
@@ -3922,10 +4083,11 @@ p
 {
 is
 (
+getPropValue
+(
 e
-[
 def
-]
+)
 defaultKeyboardEventValues
 [
 def
@@ -3951,10 +4113,11 @@ else
 {
 is
 (
+getPropValue
+(
 e
-[
 def
-]
+)
 p
 [
 def
@@ -6320,6 +6483,51 @@ metaKey
 false
 }
 {
+modifierAltGraph
+:
+false
+}
+{
+modifierCapsLock
+:
+false
+}
+{
+modifierFn
+:
+false
+}
+{
+modifierFnLock
+:
+false
+}
+{
+modifierNumLock
+:
+false
+}
+{
+modifierOS
+:
+false
+}
+{
+modifierScrollLock
+:
+false
+}
+{
+modifierSymbol
+:
+false
+}
+{
+modifierSymbolLock
+:
+false
+}
+{
 button
 :
 0
@@ -6381,6 +6589,51 @@ metaKey
 true
 }
 {
+modifierAltGraph
+:
+true
+}
+{
+modifierCapsLock
+:
+true
+}
+{
+modifierFn
+:
+true
+}
+{
+modifierFnLock
+:
+true
+}
+{
+modifierNumLock
+:
+true
+}
+{
+modifierOS
+:
+true
+}
+{
+modifierScrollLock
+:
+true
+}
+{
+modifierSymbol
+:
+true
+}
+{
+modifierSymbolLock
+:
+true
+}
+{
 button
 :
 5
@@ -6431,6 +6684,15 @@ i
 ]
 )
 {
+if
+(
+!
+isMethodResultInitializer
+(
+prop
+)
+)
+{
 ok
 (
 prop
@@ -6454,6 +6716,7 @@ prop
 "
 )
 ;
+}
 defaultMouseEventValues
 [
 prop
@@ -6516,10 +6779,11 @@ p
 {
 is
 (
+getPropValue
+(
 e
-[
 def
-]
+)
 defaultMouseEventValues
 [
 def
@@ -6545,10 +6809,11 @@ else
 {
 is
 (
+getPropValue
+(
 e
-[
 def
-]
+)
 p
 [
 def
@@ -6961,6 +7226,51 @@ metaKey
 false
 }
 {
+modifierAltGraph
+:
+false
+}
+{
+modifierCapsLock
+:
+false
+}
+{
+modifierFn
+:
+false
+}
+{
+modifierFnLock
+:
+false
+}
+{
+modifierNumLock
+:
+false
+}
+{
+modifierOS
+:
+false
+}
+{
+modifierScrollLock
+:
+false
+}
+{
+modifierSymbol
+:
+false
+}
+{
+modifierSymbolLock
+:
+false
+}
+{
 button
 :
 0
@@ -7048,6 +7358,51 @@ metaKey
 true
 }
 {
+modifierAltGraph
+:
+true
+}
+{
+modifierCapsLock
+:
+true
+}
+{
+modifierFn
+:
+true
+}
+{
+modifierFnLock
+:
+true
+}
+{
+modifierNumLock
+:
+true
+}
+{
+modifierOS
+:
+true
+}
+{
+modifierScrollLock
+:
+true
+}
+{
+modifierSymbol
+:
+true
+}
+{
+modifierSymbolLock
+:
+true
+}
+{
 button
 :
 5
@@ -7124,6 +7479,15 @@ i
 ]
 )
 {
+if
+(
+!
+isMethodResultInitializer
+(
+prop
+)
+)
+{
 ok
 (
 prop
@@ -7147,6 +7511,7 @@ prop
 "
 )
 ;
+}
 defaultWheelEventValues
 [
 prop
@@ -7209,10 +7574,11 @@ p
 {
 is
 (
+getPropValue
+(
 e
-[
 def
-]
+)
 defaultWheelEventValues
 [
 def
@@ -7238,10 +7604,11 @@ else
 {
 is
 (
+getPropValue
+(
 e
-[
 def
-]
+)
 p
 [
 def
