Bug 1153516.  Stop using loose is() comparisons in test_dom_xrays.html.  r=bholley
UltraBlame original commit: 5b4b5f04f545a299f43ec6c4ca3802e8c10237ae

--- a/dom/bindings/test/test_dom_xrays.html
+++ b/dom/bindings/test/test_dom_xrays.html
@@ -511,7 +511,7 @@ pd
 get
 )
 {
-is
+ise
 (
 pd
 .
@@ -546,7 +546,7 @@ Xrays
 }
 else
 {
-is
+ise
 (
 obj
 [
@@ -1215,6 +1215,20 @@ doc
 location
 "
 [
+win
+.
+location
+]
+)
+;
+ise
+(
+String
+(
+win
+.
+location
+)
 document
 .
 getElementById
@@ -1225,7 +1239,13 @@ t
 )
 .
 src
-]
+"
+Should
+have
+the
+right
+stringification
+"
 )
 ;
 /
