Bug 949614 - Consolidate some spellchecking test code; r=ehsan
UltraBlame original commit: a1615a80a965291f2ef9a298f181e937012f88b4

--- a/editor/libeditor/tests/test_bug366682.html
+++ b/editor/libeditor/tests/test_bug366682.html
@@ -146,6 +146,20 @@ js
 script
 >
 <
+script
+src
+=
+"
+spellcheck
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -291,7 +305,7 @@ contentDocument
 ;
 }
 function
-getSpellCheckSelection
+getEditor
 (
 )
 {
@@ -344,31 +358,12 @@ Ci
 nsIEditingSession
 )
 ;
-var
-editor
-=
+return
 editingSession
 .
 getEditorForWindow
 (
 win
-)
-;
-var
-selcon
-=
-editor
-.
-selectionController
-;
-return
-selcon
-.
-getSelection
-(
-selcon
-.
-SELECTION_SPELLCHECK
 )
 ;
 }
@@ -458,12 +453,15 @@ evalTest
 (
 )
 {
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 All
 misspellings
@@ -478,117 +476,6 @@ SimpleTest
 finish
 (
 )
-;
-}
-function
-isSpellingCheckOk
-(
-)
-{
-var
-sel
-=
-getSpellCheckSelection
-(
-)
-;
-var
-numWords
-=
-sel
-.
-rangeCount
-;
-is
-(
-numWords
-gMisspeltWords
-.
-length
-"
-Correct
-number
-of
-misspellings
-and
-words
-.
-"
-)
-;
-if
-(
-numWords
-!
-=
-gMisspeltWords
-.
-length
-)
-return
-false
-;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-numWords
-;
-i
-+
-+
-)
-{
-var
-word
-=
-sel
-.
-getRangeAt
-(
-i
-)
-;
-is
-(
-word
-gMisspeltWords
-[
-i
-]
-"
-Misspelling
-is
-what
-we
-think
-it
-is
-.
-"
-)
-;
-if
-(
-word
-!
-=
-gMisspeltWords
-[
-i
-]
-)
-return
-false
-;
-}
-return
-true
 ;
 }
 <
