--- a/editor/libeditor/tests/test_bug484181.html
+++ b/editor/libeditor/tests/test_bug484181.html
@@ -125,6 +125,20 @@ js
 script
 >
 <
+script
+src
+=
+"
+spellcheck
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -305,36 +319,6 @@ win
 ;
 }
 function
-getSpellCheckSelection
-(
-)
-{
-var
-editor
-=
-getEditor
-(
-)
-;
-var
-selcon
-=
-editor
-.
-selectionController
-;
-return
-selcon
-.
-getSelection
-(
-selcon
-.
-SELECTION_SPELLCHECK
-)
-;
-}
-function
 append
 (
 str
@@ -472,12 +456,15 @@ function
 (
 )
 {
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 All
 misspellings
@@ -528,12 +515,15 @@ lulcat
 "
 )
 ;
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 All
 misspellings
@@ -557,117 +547,6 @@ finish
 ;
 }
 )
-;
-}
-function
-isSpellingCheckOk
-(
-)
-{
-var
-sel
-=
-getSpellCheckSelection
-(
-)
-;
-var
-numWords
-=
-sel
-.
-rangeCount
-;
-is
-(
-numWords
-gMisspeltWords
-.
-length
-"
-Correct
-number
-of
-misspellings
-and
-words
-.
-"
-)
-;
-if
-(
-numWords
-!
-=
-gMisspeltWords
-.
-length
-)
-return
-false
-;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-numWords
-;
-i
-+
-+
-)
-{
-var
-word
-=
-sel
-.
-getRangeAt
-(
-i
-)
-;
-is
-(
-word
-gMisspeltWords
-[
-i
-]
-"
-Misspelling
-is
-what
-we
-think
-it
-is
-.
-"
-)
-;
-if
-(
-word
-!
-=
-gMisspeltWords
-[
-i
-]
-)
-return
-false
-;
-}
-return
-true
 ;
 }
 <
