--- a/editor/libeditor/tests/test_bug596333.html
+++ b/editor/libeditor/tests/test_bug596333.html
@@ -125,6 +125,20 @@ js
 script
 >
 <
+script
+src
+=
+"
+spellcheck
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -268,36 +282,6 @@ edit
 )
 .
 editor
-;
-}
-function
-getSpellCheckSelection
-(
-)
-{
-var
-editor
-=
-getEditor
-(
-)
-;
-var
-selcon
-=
-editor
-.
-selectionController
-;
-return
-selcon
-.
-getSelection
-(
-selcon
-.
-SELECTION_SPELLCHECK
-)
 ;
 }
 function
@@ -560,12 +544,15 @@ cheezburger
 "
 ]
 ;
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 All
 misspellings
@@ -616,12 +603,15 @@ lulcat
 "
 )
 ;
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 All
 misspellings
@@ -699,12 +689,15 @@ workd
 "
 )
 ;
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 All
 misspellings
@@ -763,12 +756,15 @@ function
 (
 )
 {
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 Misspelling
 in
@@ -834,12 +830,15 @@ function
 (
 )
 {
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 Misspelling
 is
@@ -920,117 +919,6 @@ onSpellCheck
 edit
 runOnFocus
 )
-;
-}
-function
-isSpellingCheckOk
-(
-)
-{
-var
-sel
-=
-getSpellCheckSelection
-(
-)
-;
-var
-numWords
-=
-sel
-.
-rangeCount
-;
-is
-(
-numWords
-gMisspeltWords
-.
-length
-"
-Correct
-number
-of
-misspellings
-and
-words
-.
-"
-)
-;
-if
-(
-numWords
-!
-=
-gMisspeltWords
-.
-length
-)
-return
-false
-;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-numWords
-;
-i
-+
-+
-)
-{
-var
-word
-=
-sel
-.
-getRangeAt
-(
-i
-)
-;
-is
-(
-word
-gMisspeltWords
-[
-i
-]
-"
-Misspelling
-is
-what
-we
-think
-it
-is
-.
-"
-)
-;
-if
-(
-word
-!
-=
-gMisspeltWords
-[
-i
-]
-)
-return
-false
-;
-}
-return
-true
 ;
 }
 <
