--- a/editor/libeditor/tests/test_bug432225.html
+++ b/editor/libeditor/tests/test_bug432225.html
@@ -125,6 +125,20 @@ js
 script
 >
 <
+script
+src
+=
+"
+spellcheck
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -273,7 +287,7 @@ contentDocument
 ;
 }
 function
-getSpellCheckSelection
+getEditor
 (
 )
 {
@@ -331,31 +345,12 @@ Ci
 nsIEditingSession
 )
 ;
-var
-editor
-=
+return
 editingSession
 .
 getEditorForWindow
 (
 win
-)
-;
-var
-selcon
-=
-editor
-.
-selectionController
-;
-return
-selcon
-.
-getSelection
-(
-selcon
-.
-SELECTION_SPELLCHECK
 )
 ;
 }
@@ -404,12 +399,15 @@ aLimit
 0
 )
 {
-is
+ok
 (
 isSpellingCheckOk
 (
+getEditor
+(
 )
-true
+gMisspeltWords
+)
 "
 All
 misspellings
@@ -469,117 +467,6 @@ aLimit
 }
 0
 )
-;
-}
-function
-isSpellingCheckOk
-(
-)
-{
-var
-sel
-=
-getSpellCheckSelection
-(
-)
-;
-var
-numWords
-=
-sel
-.
-rangeCount
-;
-is
-(
-numWords
-gMisspeltWords
-.
-length
-"
-Correct
-number
-of
-misspellings
-and
-words
-.
-"
-)
-;
-if
-(
-numWords
-!
-=
-gMisspeltWords
-.
-length
-)
-return
-false
-;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-numWords
-;
-i
-+
-+
-)
-{
-var
-word
-=
-sel
-.
-getRangeAt
-(
-i
-)
-;
-is
-(
-word
-gMisspeltWords
-[
-i
-]
-"
-Misspelling
-is
-what
-we
-think
-it
-is
-.
-"
-)
-;
-if
-(
-word
-!
-=
-gMisspeltWords
-[
-i
-]
-)
-return
-false
-;
-}
-return
-true
 ;
 }
 <
