Bug 1146349 - Update some widget tests to deal with async native key event synthesization. r=smaug,masayuki
UltraBlame original commit: 0490493b12e8b58e66b899034f6e5c11b3f50ac1

--- a/widget/tests/test_native_key_bindings_mac.html
+++ b/widget/tests/test_native_key_bindings_mac.html
@@ -2335,10 +2335,12 @@ end
 ;
 }
 function
+*
 testRun
 (
 aElement
 aSelectionCheck
+aCallback
 )
 {
 if
@@ -2381,17 +2383,17 @@ i
 +
 )
 {
-synthesizeNativeKey
-.
-apply
-(
-null
 synthesizedKeys
 [
 i
 ]
+.
+push
+(
+function
+(
 )
-;
+{
 aSelectionCheck
 .
 call
@@ -2404,13 +2406,49 @@ i
 ]
 )
 ;
+continueTest
+(
+)
+;
+}
+)
+;
+var
+synthOk
+=
+synthesizeNativeKey
+.
+apply
+(
+null
+synthesizedKeys
+[
+i
+]
+)
+;
+synthesizedKeys
+[
+i
+]
+.
+pop
+(
+)
+;
+yield
+synthOk
+;
 }
 }
 function
+*
 doTest
 (
 )
 {
+yield
+*
 testRun
 (
 document
@@ -2424,6 +2462,8 @@ editable
 checkWindowSelection
 )
 ;
+yield
+*
 testRun
 (
 document
@@ -2437,6 +2477,8 @@ textarea
 checkElementSelection
 )
 ;
+yield
+*
 testRun
 (
 document
@@ -2450,6 +2492,46 @@ input
 checkElementSelection
 )
 ;
+}
+let
+gTestContinuation
+=
+null
+;
+function
+continueTest
+(
+)
+{
+if
+(
+!
+gTestContinuation
+)
+{
+gTestContinuation
+=
+doTest
+(
+)
+;
+}
+var
+ret
+=
+gTestContinuation
+.
+next
+(
+)
+;
+if
+(
+ret
+.
+done
+)
+{
 SimpleTest
 .
 finish
@@ -2457,11 +2539,28 @@ finish
 )
 ;
 }
+else
+{
+is
+(
+ret
+.
+value
+true
+"
+Successfully
+synthesized
+key
+"
+)
+;
+}
+}
 SimpleTest
 .
 waitForFocus
 (
-doTest
+continueTest
 )
 ;
 <
