Bug 1153734 part 2 - Rename Animation to KeyframeEffectReadonly; r=smaug
We define KeyframeEffectReadonly in KeyframeEffect.cpp since Web Animations also
defines KeyframeEffect and when we come to implement that I expect we'll define
it in the same class, maybe even using the same object.

This patch also adds a few missing includes in places where
KeyframeEffectReadonly is used so that we're not just cargo-culting it in.

UltraBlame original commit: 1e58cc9b9f9213b0680f9545cae4232aeb82a676

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -1026,42 +1026,6 @@ peer
 name
 :
 "
-Animation
-"
-pref
-:
-"
-dom
-.
-animations
--
-api
-.
-core
-.
-enabled
-"
-}
-/
-/
-IMPORTANT
-:
-Do
-not
-change
-this
-list
-without
-review
-from
-a
-DOM
-peer
-!
-{
-name
-:
-"
 AnimationPlayer
 "
 pref
@@ -6660,6 +6624,42 @@ peer
 "
 KeyboardEvent
 "
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+{
+name
+:
+"
+KeyframeEffectReadonly
+"
+pref
+:
+"
+dom
+.
+animations
+-
+api
+.
+core
+.
+enabled
+"
+}
 /
 /
 IMPORTANT
