Bug 1153734 part 5 - Add AnimationEffectReadonly as a superinterface of KeyframeEffectReadonly; r=smaug
This patch also replaces some tabs with spaces in KeyframeEffect.h because I was
in the area.

UltraBlame original commit: 787fc1b170e3ed42d19dd2f680cb1c674c7e4d80

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -1003,6 +1003,42 @@ a
 DOM
 peer
 !
+{
+name
+:
+"
+AnimationEffectReadonly
+"
+pref
+:
+"
+dom
+.
+animations
+-
+api
+.
+core
+.
+enabled
+"
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
 "
 AnimationEvent
 "
