Bug 1151309 (Part 2) - Hide errors in multipart image parts both visually and internally. r=tn
UltraBlame original commit: 414baffa50d2fa870670215855f59a2aa75abead

--- a/image/test/mochitest/test_bug733553.html
+++ b/image/test/mochitest/test_bug733553.html
@@ -400,8 +400,34 @@ to
 parse
 it
 .
+/
+/
+We
+use
+a
+width
+of
+80
+because
+MultipartImage
+will
+just
+drop
+rillybad
+.
+jpg
+/
+/
+and
+re
+-
+present
+damon
+.
+jpg
+.
 [
-0
+80
 "
 rillybad
 .
@@ -416,8 +442,28 @@ damon
 jpg
 "
 ]
+/
+/
+Similarly
+we
+'
+ll
+drop
+bad
+.
+jpg
+so
+we
+use
+damon
+.
+jpg
+'
+s
+width
+.
 [
-0
+80
 "
 bad
 .
@@ -432,8 +478,26 @@ red
 png
 "
 ]
+/
+/
+We
+also
+drop
+invalid
+.
+jpg
+so
+we
+use
+red
+.
+png
+'
+s
+width
+.
 [
-0
+1
 "
 invalid
 .
