Bug 1153958 - Make manifest processor e10s friendly. r=ehsan
UltraBlame original commit: 8e41db76691a35bf3049e3c5e32337567f7a2c0c

--- a/dom/manifest/test/test_IconsProcessor_src.html
+++ b/dom/manifest/test/test_IconsProcessor_src.html
@@ -379,10 +379,8 @@ s
 src
 to
 be
-an
-instance
-of
-URL
+a
+string
 .
 ;
 var
@@ -425,10 +423,7 @@ data
 ;
 ise
 (
-SpecialPowers
-.
-unwrap
-(
+typeof
 result
 .
 icons
@@ -437,10 +432,9 @@ icons
 ]
 .
 src
-)
-instanceof
-URL
-true
+"
+string
+"
 expected
 )
 ;
