--- a/dom/manifest/test/test_ManifestProcessor_JSON.html
+++ b/dom/manifest/test/test_ManifestProcessor_JSON.html
@@ -223,20 +223,14 @@ data
 ;
 SimpleTest
 .
-ok
+ise
 (
 result
 .
 start_url
-.
-href
-=
-=
-=
 docURL
 .
 href
-true
 expected
 )
 ;
@@ -306,20 +300,14 @@ data
 ;
 SimpleTest
 .
-ok
+ise
 (
 result
 .
 start_url
-.
-href
-=
-=
-=
 docURL
 .
 href
-true
 expected
 )
 ;
