Make test_bug946632 compatible with asynchronous scrolling. (bug 1140293, r=mstange)
UltraBlame original commit: 7798f96e4cae923eff08d41b64b35546faaea473

--- a/dom/events/test/test_bug946632.html
+++ b/dom/events/test/test_bug946632.html
@@ -400,7 +400,43 @@ SimpleTest
 .
 waitForFocus
 (
+function
+(
+)
+{
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+general
+.
+smoothScroll
+"
+false
+]
+[
+"
+mousewheel
+.
+system_scroll_override_on_root_content
+.
+enabled
+"
+false
+]
+]
+}
 runTests
+)
+}
 window
 )
 ;
@@ -430,9 +466,8 @@ container
 )
 ;
 function
-prepare
+reset
 (
-check
 )
 {
 container
@@ -475,6 +510,13 @@ getBoundingClientRect
 (
 )
 ;
+}
+function
+prepare
+(
+check
+)
+{
 container
 .
 style
@@ -648,17 +690,8 @@ scrollLeft
 )
 ;
 }
-test
+event
 :
-function
-(
-)
-{
-synthesizeWheel
-(
-input
-5
-5
 {
 deltaMode
 :
@@ -674,9 +707,6 @@ lineOrPageDeltaY
 :
 1
 }
-)
-;
-}
 }
 {
 check
@@ -784,17 +814,8 @@ scrollLeft
 )
 ;
 }
-test
+event
 :
-function
-(
-)
-{
-synthesizeWheel
-(
-input
-5
-5
 {
 deltaMode
 :
@@ -810,9 +831,6 @@ lineOrPageDeltaX
 :
 1
 }
-)
-;
-}
 }
 {
 check
@@ -918,17 +936,8 @@ scrollLeft
 )
 ;
 }
-test
+event
 :
-function
-(
-)
-{
-synthesizeWheel
-(
-input
-5
-5
 {
 deltaMode
 :
@@ -944,9 +953,6 @@ lineOrPageDeltaY
 :
 1
 }
-)
-;
-}
 }
 {
 check
@@ -1054,17 +1060,8 @@ scrollLeft
 )
 ;
 }
-test
+event
 :
-function
-(
-)
-{
-synthesizeWheel
-(
-input
-5
-5
 {
 deltaMode
 :
@@ -1079,9 +1076,6 @@ deltaX
 lineOrPageDeltaX
 :
 1
-}
-)
-;
 }
 }
 ]
@@ -1106,6 +1100,14 @@ tests
 length
 )
 {
+SpecialPowers
+.
+DOMWindowUtils
+.
+restoreNormalRefresh
+(
+)
+;
 SimpleTest
 .
 finish
@@ -1127,11 +1129,8 @@ i
 +
 i
 ;
-prepare
+reset
 (
-test
-.
-check
 )
 ;
 window
@@ -1142,10 +1141,38 @@ function
 (
 )
 {
+prepare
+(
 test
 .
-test
+check
+)
+;
+sendWheelAndPaint
 (
+input
+5
+5
+test
+.
+event
+function
+(
+)
+{
+/
+/
+Do
+nothing
+-
+we
+wait
+for
+the
+scroll
+event
+.
+}
 )
 ;
 }
