Refactor test_bug422132. (bug 1149128, r=kats)
UltraBlame original commit: 8732f95f12f0ae501e7826d16da39a329c1e14d9

--- a/dom/events/test/test_bug422132.html
+++ b/dom/events/test/test_bug422132.html
@@ -439,11 +439,13 @@ target
 .
 scrollTop
 ;
-synthesizeWheel
-(
-target
-10
-10
+var
+tests
+=
+[
+{
+event
+:
 {
 deltaMode
 :
@@ -467,10 +469,8 @@ lineOrPageDeltaY
 :
 0
 }
-)
-;
-hitEventLoop
-(
+check
+:
 function
 (
 )
@@ -513,23 +513,11 @@ value
 "
 )
 ;
-scrollLeft
-=
-target
-.
-scrollLeft
-;
-scrollTop
-=
-target
-.
-scrollTop
-;
-synthesizeWheel
-(
-target
-10
-10
+}
+}
+{
+event
+:
 {
 deltaMode
 :
@@ -553,10 +541,8 @@ lineOrPageDeltaY
 :
 0
 }
-)
-;
-hitEventLoop
-(
+check
+:
 function
 (
 )
@@ -615,23 +601,11 @@ delta
 "
 )
 ;
-scrollLeft
-=
-target
-.
-scrollLeft
-;
-scrollTop
-=
-target
-.
-scrollTop
-;
-synthesizeWheel
-(
-target
-10
-10
+}
+}
+{
+event
+:
 {
 deltaMode
 :
@@ -655,10 +629,8 @@ lineOrPageDeltaY
 :
 0
 }
-)
-;
-hitEventLoop
-(
+check
+:
 function
 (
 )
@@ -703,23 +675,11 @@ value
 "
 )
 ;
-scrollLeft
-=
-target
-.
-scrollLeft
-;
-scrollTop
-=
-target
-.
-scrollTop
-;
-synthesizeWheel
-(
-target
-10
-10
+}
+}
+{
+event
+:
 {
 deltaMode
 :
@@ -743,10 +703,8 @@ lineOrPageDeltaY
 :
 1
 }
-)
-;
-hitEventLoop
-(
+check
+:
 function
 (
 )
@@ -809,14 +767,83 @@ delta
 "
 )
 ;
+}
+}
+]
+;
+var
+nextTest
+=
+function
+(
+)
+{
+var
+test
+=
+tests
+.
+shift
+(
+)
+;
+synthesizeWheel
+(
+target
+10
+10
+test
+.
+event
+)
+;
+hitEventLoop
+(
+function
+(
+)
+{
+test
+.
+check
+(
+)
+;
+if
+(
+tests
+.
+length
+=
+=
+0
+)
+{
 SimpleTest
 .
 finish
 (
 )
 ;
+return
+;
 }
-20
+scrollLeft
+=
+target
+.
+scrollLeft
+;
+scrollTop
+=
+target
+.
+scrollTop
+;
+setTimeout
+(
+nextTest
+0
 )
 ;
 }
@@ -824,11 +851,8 @@ finish
 )
 ;
 }
-20
-)
-;
-}
-20
+nextTest
+(
 )
 ;
 }
