Make test_bug422132.html compatible with APZ. (bug 1149128, r=kats)
UltraBlame original commit: e4d3753af8a2a3ae8d28469e4e191c27cf499343

--- a/dom/events/test/test_bug422132.html
+++ b/dom/events/test/test_bug422132.html
@@ -121,6 +121,32 @@ js
 script
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+paint_listener
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -316,15 +342,6 @@ waitForExplicitFinish
 ;
 SimpleTest
 .
-requestFlakyTimeout
-(
-"
-untriaged
-"
-)
-;
-SimpleTest
-.
 waitForFocus
 (
 function
@@ -361,6 +378,16 @@ min_line_scroll_amount
 "
 mousewheel
 .
+system_scroll_override_on_root_content
+.
+enabled
+"
+false
+]
+[
+"
+mousewheel
+.
 transaction
 .
 timeout
@@ -375,39 +402,6 @@ runTests
 window
 )
 ;
-function
-hitEventLoop
-(
-aFunc
-aTimes
-)
-{
-if
-(
--
--
-aTimes
-)
-{
-setTimeout
-(
-hitEventLoop
-0
-aFunc
-aTimes
-)
-;
-}
-else
-{
-setTimeout
-(
-aFunc
-20
-)
-;
-}
-}
 function
 runTests
 (
@@ -444,6 +438,52 @@ tests
 =
 [
 {
+prepare
+:
+function
+(
+)
+{
+scrollLeft
+=
+target
+.
+scrollLeft
+;
+scrollTop
+=
+target
+.
+scrollTop
+;
+}
+event
+:
+{
+deltaMode
+:
+WheelEvent
+.
+DOM_DELTA_PIXEL
+deltaX
+:
+0
+.
+5
+deltaY
+:
+0
+.
+5
+lineOrPageDeltaX
+:
+0
+lineOrPageDeltaY
+:
+0
+}
+}
+{
 event
 :
 {
@@ -480,8 +520,11 @@ is
 target
 .
 scrollLeft
+-
 scrollLeft
+1
 "
+not
 scrolled
 to
 right
@@ -491,6 +534,12 @@ by
 5px
 delta
 value
+with
+pending
+0
+.
+5px
+delta
 "
 )
 ;
@@ -499,8 +548,11 @@ is
 target
 .
 scrollTop
+-
 scrollTop
+1
 "
+not
 scrolled
 to
 bottom
@@ -510,100 +562,37 @@ by
 5px
 delta
 value
+with
+pending
+0
+.
+5px
+delta
 "
 )
 ;
 }
 }
 {
-event
-:
-{
-deltaMode
-:
-WheelEvent
-.
-DOM_DELTA_PIXEL
-deltaX
-:
-0
-.
-5
-deltaY
-:
-0
-.
-5
-lineOrPageDeltaX
-:
-0
-lineOrPageDeltaY
-:
-0
-}
-check
+prepare
 :
 function
 (
 )
 {
-ok
-(
+scrollLeft
+=
 target
 .
 scrollLeft
->
-scrollLeft
-"
-not
-scrolled
-to
-right
-by
-0
-.
-5px
-delta
-value
-with
-pending
-0
-.
-5px
-delta
-"
-)
 ;
-ok
-(
+scrollTop
+=
 target
 .
 scrollTop
->
-scrollTop
-"
-not
-scrolled
-to
-bottom
-by
-0
-.
-5px
-delta
-value
-with
-pending
-0
-.
-5px
-delta
-"
-)
 ;
 }
-}
-{
 event
 :
 {
@@ -628,53 +617,6 @@ lineOrPageDeltaX
 lineOrPageDeltaY
 :
 0
-}
-check
-:
-function
-(
-)
-{
-is
-(
-target
-.
-scrollLeft
-scrollLeft
-"
-scrolled
-to
-right
-by
-0
-.
-5
-line
-delta
-value
-"
-)
-;
-is
-(
-target
-.
-scrollTop
-scrollTop
-"
-scrolled
-to
-bottom
-by
-0
-.
-5
-line
-delta
-value
-"
-)
-;
 }
 }
 {
@@ -709,13 +651,14 @@ function
 (
 )
 {
-ok
+is
 (
 target
 .
 scrollLeft
->
+-
 scrollLeft
+1
 "
 not
 scrolled
@@ -738,13 +681,14 @@ delta
 "
 )
 ;
-ok
+is
 (
 target
 .
 scrollTop
->
+-
 scrollTop
+1
 "
 not
 scrolled
@@ -787,7 +731,21 @@ shift
 (
 )
 ;
-synthesizeWheel
+if
+(
+test
+.
+prepare
+)
+{
+test
+.
+prepare
+(
+)
+;
+}
+sendWheelAndPaint
 (
 target
 10
@@ -795,12 +753,15 @@ target
 test
 .
 event
-)
-;
-hitEventLoop
-(
 function
 (
+)
+{
+if
+(
+test
+.
+check
 )
 {
 test
@@ -809,6 +770,7 @@ check
 (
 )
 ;
+}
 if
 (
 tests
@@ -828,18 +790,6 @@ finish
 return
 ;
 }
-scrollLeft
-=
-target
-.
-scrollLeft
-;
-scrollTop
-=
-target
-.
-scrollTop
-;
 setTimeout
 (
 nextTest
@@ -847,7 +797,6 @@ nextTest
 )
 ;
 }
-20
 )
 ;
 }
