--- a/dom/camera/test/test_camera_hardware_auto_focus_moving_cb.html
+++ b/dom/camera/test/test_camera_hardware_auto_focus_moving_cb.html
@@ -379,6 +379,167 @@ return
 sync
 ;
 }
+function
+waitAutoFocusComplete
+(
+p
+)
+{
+var
+sync
+=
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+function
+onEvent
+(
+e
+)
+{
+suite
+.
+camera
+.
+removeEventListener
+(
+'
+focus
+'
+onEvent
+)
+;
+ok
+(
+e
+.
+newState
+=
+=
+=
+'
+focused
+'
+'
+autofocus
+event
+state
+focused
+=
+=
+'
++
+e
+.
+newState
+)
+;
+resolve
+(
+)
+;
+}
+suite
+.
+camera
+.
+addEventListener
+(
+'
+focus
+'
+onEvent
+)
+;
+}
+)
+;
+/
+/
+Missing
+the
+fireAutoFocusComplete
+but
+it
+should
+timeout
+on
+its
+own
+suite
+.
+hw
+.
+fireAutoFocusMoving
+(
+false
+)
+;
+return
+sync
+;
+}
+function
+runAutoFocusCycle
+(
+p
+)
+{
+return
+triggerAutoFocusMoving
+(
+p
+)
+.
+then
+(
+waitAutoFocusComplete
+)
+;
+}
+/
+*
+If
+the
+driver
+doesn
+'
+t
+supply
+an
+onAutoFocusComplete
+notification
+gecko
+will
+timeout
+and
+provide
+it
+.
+After
+three
+times
+it
+will
+no
+longer
+rely
+upon
+a
+timeout
+and
+fire
+it
+immediately
+.
+*
+/
 return
 suite
 .
@@ -388,7 +549,22 @@ getCamera
 .
 then
 (
-triggerAutoFocusMoving
+runAutoFocusCycle
+)
+.
+then
+(
+runAutoFocusCycle
+)
+.
+then
+(
+runAutoFocusCycle
+)
+.
+then
+(
+runAutoFocusCycle
 )
 ;
 }
