--- a/dom/media/test/test_error_in_video_document.html
+++ b/dom/media/test/test_error_in_video_document.html
@@ -222,13 +222,11 @@ Bug
 *
 /
 function
-check
+documentVideo
 (
 )
 {
-var
-v
-=
+return
 document
 .
 body
@@ -256,6 +254,19 @@ video
 [
 0
 ]
+;
+}
+function
+check
+(
+)
+{
+var
+v
+=
+documentVideo
+(
+)
 ;
 /
 /
@@ -450,13 +461,85 @@ function
 (
 )
 {
-SimpleTest
-.
-executeSoon
+if
 (
+documentVideo
+(
+)
+.
+error
+)
+{
+info
+(
+"
+Error
+occured
+by
+the
+time
+we
+got
+|
+load
+|
+-
+checking
+directly
+.
+"
+)
+;
+check
+(
+)
+;
+}
+else
+{
+todo
+(
+false
+"
+Error
+hasn
+'
+t
+occurred
+yet
+-
+adding
+|
+error
+|
+event
+listener
+.
+This
+shouldn
+'
+t
+happen
+see
+bug
+608634
+.
+"
+)
+;
+documentVideo
+(
+)
+.
+addEventListener
+(
+"
+error
+"
 check
 )
 ;
+}
 }
 false
 )
