Bug 1112469 - Part 5: Actually test the code path that handles the idle-daily message; r=nsm
This is much better than testing just the
nsIServiceWorkerManager::UpdateAllRegistrations API.

UltraBlame original commit: 64fac03497109dbd53b1b1a16b4fe533cd8b915e

--- a/dom/workers/test/serviceworkers/test_periodic_update.html
+++ b/dom/workers/test/serviceworkers/test_periodic_update.html
@@ -468,34 +468,9 @@ function
 (
 )
 {
-var
-swm
-=
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-serviceworkers
-/
-manager
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIServiceWorkerManager
-)
-;
-swm
-.
-updateAllRegistrations
+startPeriodicServiceWorkerUpdates
 (
 )
 ;
@@ -680,6 +655,20 @@ dom
 serviceWorkers
 .
 testing
+.
+enabled
+"
+true
+]
+[
+"
+dom
+.
+serviceWorkers
+.
+periodic
+-
+updates
 .
 enabled
 "
