Bug 1154679 - Part 2: Remove the usage of is_loosely from test_dragstart.html; r=Ms2ger
UltraBlame original commit: 1cb7031e84ed30293c3fb299513f8cb78d686662

--- a/dom/events/test/test_dragstart.html
+++ b/dom/events/test/test_dragstart.html
@@ -2171,6 +2171,10 @@ strong
 >
 "
 draggable
+.
+toString
+(
+)
 ]
 0
 "
@@ -6028,7 +6032,7 @@ index
 =
 0
 )
-is_loosely
+is
 (
 dt
 .
@@ -6055,7 +6059,7 @@ f
 ]
 )
 ;
-is_loosely
+is
 (
 dt
 .
