Bug 1144211 - Improve code coverage of camera mochitests. r=mikeh
UltraBlame original commit: be44c0a5cf9ec6a188e2cc3f11ab82925f78767c

--- a/dom/camera/test/test_camera_auto_focus.html
+++ b/dom/camera/test/test_camera_auto_focus.html
@@ -7,44 +7,15 @@ HTML
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-940424
--
--
->
-<
 head
 >
 <
 title
 >
-Bug
-940424
--
 Test
-camera
-hardware
-API
-failure
-handling
+for
+auto
+focus
 <
 /
 title
@@ -154,42 +125,6 @@ head
 >
 <
 body
->
-<
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-940424
-"
->
-Mozilla
-Bug
-940424
-<
-/
-a
 >
 <
 video
@@ -1078,59 +1013,429 @@ suite
 test
 (
 '
-take
+auto
 -
-picture
+focus
 -
-failures
+moving
 '
 function
 (
 )
 {
 function
-startTakePictureProcessError
+triggerAutoFocusMoving
 (
 p
 )
 {
-suite
-.
-hw
-.
-attach
+var
+sync
+=
+new
+Promise
 (
-{
-takePicture
-:
 function
 (
+resolve
+reject
 )
 {
-suite
-.
-hw
-.
-fireTakePictureError
+function
+onEvent
 (
+e
 )
-;
-}
-}
-)
-;
-return
+{
 suite
 .
 camera
 .
-takePicture
+removeEventListener
+(
+'
+focus
+'
+onEvent
+)
+;
+ok
+(
+e
+.
+newState
+=
+=
+=
+'
+focusing
+'
+'
+autofocus
+event
+state
+focusing
+=
+=
+'
++
+e
+.
+newState
+)
+;
+resolve
+(
+)
+;
+}
+suite
+.
+camera
+.
+addEventListener
+(
+'
+focus
+'
+onEvent
+)
+;
+}
+)
+;
+suite
+.
+hw
+.
+fireAutoFocusMoving
+(
+true
+)
+;
+return
+sync
+;
+}
+function
+waitAutoFocusComplete
+(
+p
+)
+{
+var
+sync
+=
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+function
+onEvent
+(
+e
+)
+{
+suite
+.
+camera
+.
+removeEventListener
+(
+'
+focus
+'
+onEvent
+)
+;
+ok
+(
+e
+.
+newState
+=
+=
+=
+'
+focused
+'
+'
+autofocus
+event
+state
+focused
+=
+=
+'
++
+e
+.
+newState
+)
+;
+resolve
+(
+)
+;
+}
+suite
+.
+camera
+.
+addEventListener
+(
+'
+focus
+'
+onEvent
+)
+;
+}
+)
+;
+/
+/
+Missing
+the
+fireAutoFocusComplete
+but
+it
+should
+timeout
+on
+its
+own
+suite
+.
+hw
+.
+fireAutoFocusMoving
+(
+false
+)
+;
+return
+sync
+;
+}
+function
+runAutoFocusCycle
+(
+p
+)
+{
+return
+triggerAutoFocusMoving
+(
+p
+)
+.
+then
+(
+waitAutoFocusComplete
+)
+;
+}
+/
+*
+If
+the
+driver
+doesn
+'
+t
+supply
+an
+onAutoFocusComplete
+notification
+gecko
+will
+timeout
+and
+provide
+it
+.
+After
+three
+times
+it
+will
+no
+longer
+rely
+upon
+a
+timeout
+and
+fire
+it
+immediately
+.
+*
+/
+return
+suite
+.
+getCamera
+(
+)
+.
+then
+(
+runAutoFocusCycle
+)
+.
+then
+(
+runAutoFocusCycle
+)
+.
+then
+(
+runAutoFocusCycle
+)
+.
+then
+(
+runAutoFocusCycle
+)
+;
+}
+)
+;
+suite
+.
+test
+(
+'
+auto
+-
+focus
+-
+interrupted
+'
+function
+(
+)
+{
+/
+/
+bug
+1022766
+function
+triggerAutoFocus
+(
+p
+)
+{
+return
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+var
+firstCall
+=
+false
+;
+var
+secondCall
+=
+false
+;
+function
+end
+(
+)
+{
+if
+(
+firstCall
+&
+&
+secondCall
+)
+{
+resolve
+(
+)
+;
+}
+}
+/
+/
+It
+doesn
+'
+t
+matter
+if
+the
+emulator
+supports
+focus
+or
+not
+;
+/
+/
+this
+is
+just
+testing
+the
+sequencing
+.
+suite
+.
+camera
+.
+autoFocus
+(
+)
+.
+then
+(
+function
+(
+p
+)
+{
+ok
+(
+false
+"
+First
+call
+to
+autoFocus
+(
+)
+succeeded
+unexpectedly
+"
+)
+;
+firstCall
+=
+true
+;
+end
 (
 )
 ;
 }
 function
-rejectTakePictureProcessError
 (
 e
 )
@@ -1144,89 +1449,108 @@ name
 =
 =
 '
-NS_ERROR_FAILURE
+NS_ERROR_IN_PROGRESS
 '
 '
-takePicture
+First
+call
+to
+autoFocus
 (
 )
-process
-should
-fail
+failed
+with
 :
 '
 +
 e
 )
 ;
-}
-function
-startTakePictureError
-(
-p
-)
-{
-suite
-.
-hw
-.
-attach
-(
-{
-takePicture
-:
-function
-(
-)
-{
-throw
-SpecialPowers
-.
-Cr
-.
-NS_ERROR_FAILURE
+firstCall
+=
+true
 ;
-}
+end
+(
+)
+;
 }
 )
 ;
-return
 suite
 .
 camera
 .
-takePicture
+autoFocus
+(
+)
+.
+then
+(
+function
+(
+p
+)
+{
+ok
+(
+true
+"
+Second
+call
+to
+autoFocus
+(
+)
+succeeded
+"
+)
+;
+secondCall
+=
+true
+;
+end
 (
 )
 ;
 }
 function
-rejectTakePictureError
 (
 e
 )
 {
 ok
 (
-e
-.
-name
-=
-=
-=
-'
-NS_ERROR_FAILURE
-'
-'
-takePicture
+false
+"
+Second
+call
+to
+autoFocus
 (
 )
-should
-fail
+failed
+unexpectedly
+with
 :
-'
+"
 +
 e
+)
+;
+secondCall
+=
+true
+;
+end
+(
+)
+;
+}
+)
+;
+}
 )
 ;
 }
@@ -1237,38 +1561,111 @@ getCamera
 (
 )
 .
-catch
+then
 (
+triggerAutoFocus
 suite
 .
 rejectGetCamera
 )
-.
-then
-(
-startTakePictureProcessError
+}
 )
-.
-then
-(
+;
 suite
 .
-expectedRejectTakePicture
-rejectTakePictureProcessError
-)
-.
-then
+test
 (
-startTakePictureError
-)
-.
-then
+'
+cancel
+-
+auto
+-
+focus
+'
+function
 (
+)
+{
+function
+cancelAutoFocus
+(
+p
+)
+{
+var
+promise
+=
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
 suite
 .
-expectedRejectTakePicture
-rejectTakePictureError
+hw
+.
+attach
+(
+{
+cancelAutoFocus
+:
+function
+(
 )
+{
+ok
+(
+true
+'
+got
+cancel
+auto
+focus
+'
+)
+;
+resolve
+(
+)
+;
+}
+}
+)
+;
+}
+)
+;
+suite
+.
+camera
+.
+resumeContinuousFocus
+(
+)
+;
+return
+promise
+;
+}
+return
+suite
+.
+getCamera
+(
+)
+.
+then
+(
+cancelAutoFocus
+suite
+.
+rejectGetCamera
+)
+;
 }
 )
 ;
