--- a/dom/camera/test/test_camera_face_detection.html
+++ b/dom/camera/test/test_camera_face_detection.html
@@ -1158,6 +1158,482 @@ test
 face
 -
 detection
+-
+op
+'
+function
+(
+)
+{
+function
+start
+(
+p
+)
+{
+return
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+suite
+.
+hw
+.
+attach
+(
+{
+startFaceDetection
+:
+function
+(
+)
+{
+ok
+(
+true
+"
+startFaceDetection
+(
+)
+requested
+"
+)
+;
+resolve
+(
+)
+;
+}
+}
+)
+;
+try
+{
+suite
+.
+camera
+.
+startFaceDetection
+(
+)
+;
+ok
+(
+true
+"
+startFaceDetection
+(
+)
+succeeded
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+ok
+(
+false
+"
+startFaceDetection
+(
+)
+failed
+with
+:
+"
++
+e
+.
+name
+)
+;
+resolve
+(
+)
+;
+}
+}
+)
+;
+}
+function
+stop
+(
+p
+)
+{
+return
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+suite
+.
+hw
+.
+attach
+(
+{
+stopFaceDetection
+:
+function
+(
+)
+{
+ok
+(
+true
+"
+stopFaceDetection
+(
+)
+requested
+"
+)
+;
+resolve
+(
+)
+;
+}
+}
+)
+;
+try
+{
+suite
+.
+camera
+.
+stopFaceDetection
+(
+)
+;
+ok
+(
+true
+"
+stopFaceDetection
+(
+)
+succeeded
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+ok
+(
+false
+"
+stopFaceDetection
+(
+)
+failed
+with
+:
+"
++
+e
+.
+name
+)
+;
+resolve
+(
+)
+;
+}
+}
+)
+;
+}
+function
+startFailure
+(
+p
+)
+{
+return
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+suite
+.
+hw
+.
+attach
+(
+{
+startFaceDetection
+:
+function
+(
+)
+{
+ok
+(
+true
+"
+startFaceDetection
+(
+)
+requested
+and
+failed
+"
+)
+;
+resolve
+(
+)
+;
+throw
+SpecialPowers
+.
+Cr
+.
+NS_ERROR_FAILURE
+;
+}
+}
+)
+;
+try
+{
+suite
+.
+camera
+.
+startFaceDetection
+(
+)
+;
+ok
+(
+true
+"
+startFaceDetection
+(
+)
+succeeded
+and
+error
+swallowed
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+ok
+(
+false
+"
+startFaceDetection
+(
+)
+failed
+with
+:
+"
++
+e
+.
+name
+)
+;
+resolve
+(
+)
+;
+}
+}
+)
+;
+}
+function
+stopFailure
+(
+p
+)
+{
+return
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+suite
+.
+hw
+.
+attach
+(
+{
+stopFaceDetection
+:
+function
+(
+)
+{
+ok
+(
+true
+"
+stopFaceDetection
+(
+)
+requested
+and
+failed
+"
+)
+;
+resolve
+(
+)
+;
+throw
+SpecialPowers
+.
+Cr
+.
+NS_ERROR_FAILURE
+;
+}
+}
+)
+;
+try
+{
+suite
+.
+camera
+.
+stopFaceDetection
+(
+)
+;
+ok
+(
+true
+"
+stopFaceDetection
+(
+)
+succeeded
+and
+error
+swallowed
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+ok
+(
+false
+"
+stopFaceDetection
+(
+)
+failed
+with
+:
+"
++
+e
+.
+name
+)
+;
+resolve
+(
+)
+;
+}
+}
+)
+;
+}
+return
+suite
+.
+getCamera
+(
+)
+.
+then
+(
+start
+suite
+.
+rejectGetCamera
+)
+.
+then
+(
+stop
+)
+.
+then
+(
+startFailure
+)
+.
+then
+(
+stopFailure
+)
+;
+}
+)
+;
+suite
+.
+test
+(
+'
+face
+-
+detection
 '
 function
 (
@@ -1167,9 +1643,24 @@ function
 detectFace
 (
 msg
+given
 expected
 )
 {
+if
+(
+expected
+=
+=
+=
+undefined
+)
+{
+expected
+=
+given
+;
+}
 var
 sync
 =
@@ -1262,7 +1753,7 @@ hw
 .
 fireFacesDetected
 (
-expected
+given
 )
 ;
 return
@@ -1558,6 +2049,104 @@ faces
 )
 ;
 }
+function
+detectOneFaceExcessScore
+(
+)
+{
+return
+detectFace
+(
+'
+one
+-
+face
+-
+excess
+-
+score
+'
+{
+faces
+:
+[
+{
+id
+:
+1
+score
+:
+120
+bounds
+:
+{
+left
+:
+3
+top
+:
+4
+right
+:
+5
+bottom
+:
+6
+}
+leftEye
+:
+null
+rightEye
+:
+null
+mouth
+:
+null
+}
+]
+}
+{
+faces
+:
+[
+{
+id
+:
+1
+score
+:
+100
+bounds
+:
+{
+left
+:
+3
+top
+:
+4
+right
+:
+5
+bottom
+:
+6
+}
+leftEye
+:
+null
+rightEye
+:
+null
+mouth
+:
+null
+}
+]
+}
+)
+;
+}
 return
 suite
 .
@@ -1586,6 +2175,11 @@ detectOneFaceNoFeatures
 then
 (
 detectNoFaces
+)
+.
+then
+(
+detectOneFaceExcessScore
 )
 ;
 }
