Bug 102663 - Add a test case for pressing space when an image map is focused; r=roc
UltraBlame original commit: 984018eae04af10445d9e0a6ed7c480bd58d96a1

--- a/editor/libeditor/tests/test_bug915962.html
+++ b/editor/libeditor/tests/test_bug915962.html
@@ -564,6 +564,54 @@ clicked
 "
 )
 ;
+synthesizeKey
+(
+"
+VK_TAB
+"
+{
+}
+win
+)
+;
+step
+(
+)
+;
+oldY
+=
+win
+.
+scrollY
+;
+synthesizeKey
+(
+"
+"
+{
+}
+win
+)
+;
+step
+(
+)
+ok
+(
+win
+.
+scrollY
+>
+=
+oldY
+"
+Page
+is
+scrolled
+down
+"
+)
+;
 win
 .
 close
