--- a/editor/libeditor/tests/file_bug915962.html
+++ b/editor/libeditor/tests/file_bug915962.html
@@ -18,6 +18,88 @@ Button
 button
 >
 <
+img
+src
+=
+"
+green
+.
+png
+"
+usemap
+=
+"
+#
+map
+"
+>
+<
+map
+name
+=
+"
+map
+"
+>
+<
+!
+-
+-
+This
+URL
+ensures
+that
+the
+link
+doesn
+'
+t
+get
+clicked
+since
+mochitests
+cannot
+access
+the
+outside
+network
+.
+-
+-
+>
+<
+area
+shape
+=
+"
+rect
+"
+coords
+=
+"
+0
+0
+10
+10
+"
+href
+=
+"
+https
+:
+/
+/
+youtube
+.
+com
+/
+"
+>
+<
+/
+map
+>
+<
 div
 style
 =
