Bug 1337940 - Part 2 - Make session store form data test work again. r=ahunt
Collecting data for history changes causes an additional session store data update for that tab when navigating back, which needs to be accounted for in this test. Therefore we now also wait for DOMTitleChanged before assuming that the tab has navigated to its intended location.

MozReview-Commit-ID: FDNQednXPWh

UltraBlame original commit: 6fa30faf379173a45cda1c400a15e4849b94013a

--- a/mobile/android/tests/browser/chrome/test_session_form_data.html
+++ b/mobile/android/tests/browser/chrome/test_session_form_data.html
@@ -1917,7 +1917,20 @@ goBack
 (
 )
 ;
-yield
+let
+titleChange
+=
+promiseTabEvent
+(
+browser
+"
+DOMTitleChanged
+"
+)
+;
+let
+tabDataUpdate
+=
 promiseTabEvent
 (
 browser
@@ -1925,6 +1938,12 @@ browser
 SSTabDataUpdated
 "
 )
+;
+yield
+titleChange
+;
+yield
+tabDataUpdate
 ;
 is
 (
